<resources>
    <string name="app_name">草根钱包</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="transfer_input">转入</string>
    <string name="transfer_output">转出</string>
    <string name="main_top_cg_wallet">草根钱包</string>
    <string name="main_top_my_wallet">我的钱包</string>
    <string name="cg_wallet_earnings">万份年化收益</string>
    <string name="monitoring_platform"></string>
    <string name="main_right_text">当面扫一扫，好友一起赚</string>
    <string name="main_right_text_bottom">推荐规则 ></string>
    <string name="click_to_see_more">点击查看更多</string>
    <string name="load">加载中……</string>
    <string name="load_wait">请稍后……</string>
    <string name="load_error">载入失败，点击重新载入</string>
    <string name="no_more">• END •</string>
    <string name="new_no_more">以上是全部订单</string>
    <string name="setup_gesture_code">设置手势密码</string>
    <string name="setup_gesture_pattern">绘制解锁图案</string>
    <string name="setup_gesture_pattern_again">再次绘制解锁图案</string>
    <string name="forget_gesture_code">忘记手势密码?</string>
    <string name="use_other_account_login">用其他账号登录</string>
    <string name="set_gesture_pattern">绘制解锁图案</string>
    <string name="set_gesture_pattern_reason">设置手势密码，防止他人未经授权查看</string>
    <string name="reset_gesture_code">重新设置手势密码</string>
    <string name="banner_text"></string>
    <string name="wallet_basic_info1">1元起投</string>
    <string name="wallet_basic_info2">五重保障</string>
    <string name="wallet_basic_info3">随存随取</string>
    <string name="really_name">实名认证</string>
    <string name="really_bankcard">绑定银行卡</string>
    <string name="no_anthen">未认证</string>
    <string name="no_binding">未绑定</string>
    <string name="login_pwd_change">登录密码</string>
    <string name="sodoko_unlock">解锁密码</string>
    <string name="sudoko_open_sudoko_unlock">开启手势密码</string>
    <string name="sudoko_set_again">重新设置手势</string>
    <string name="title_activity_feed_back">FeedBackActivity</string>
    <string name="title_activity_e_all">转账记录</string>
    <string name="login_welcome_text">欢迎加入草根理财</string>
    <string name="login_edit_hint_text">请输入手机号</string>
    <string name="login_edit_pwd_hint_text">请输入登录密码</string>
    <string name="login_button_next">登  录</string>
    <string name="login_button_finish">完成</string>
    <string name="my_wallet_today_earning_hint">今日收益（元）</string>
    <string name="feed_hint">感谢你对草根钱包的关注，您的意见我们一定认真听取!</string>
    <string name="title_activity_Earnings_record">我的收益</string>
    <string name="title_activity_main">主界面</string>
    <string name="title_activity_ScreenSlideActivity">引导图</string>
    <string name="hint_can_login">草根投资用户可直接登录</string>
    <string name="hint_service_text">客服电话：</string>
    <string name="hint_forget_pwd">忘记密码</string>
    <string name="hint_regist_account">注册</string>
    <string name="error_need_phone">请输入手机号</string>
    <string name="error_need_pwd">请输入登录密码</string>
    <string name="text_please_login">请登录</string>
    <string name="hint_regist_mobile">手机号码</string>
    <string name="hint_regist_text">“草根投资”用户可直接登录</string>
    <string name="hint_regist_security_code">验证码</string>
    <string name="hint_regist_get_security_code">获取验证码</string>
    <string name="hint_regist_next">下一步</string>
    <string name="title_activity_login_or_regist">登录</string>
    <string name="title_activity_regist_next">RegistNextActivity</string>
    <string name="hint_regist_edit_pwd">请设置登录密码</string>
    <string name="hint_regist_pwd_introduce">6-20个字符，由大小写字母、数字组成</string>
    <string name="pwd_digits">qwertyuiopasdfghjklmnbvcxzQWERTYUIOPLKJHGFDSAZXCVBNM1234567890</string>
    <string name="text_regist_finish">同意协议并注册</string>
    <string name="hint_regist_protocol">《草根钱包协议》</string>
    <string name="title_activity_save_money">SaveMoneyActivity</string>
    <string name="save_money_button_text">确认转入</string>
    <string name="title_activity_information_confirm">InformationConfirmActivity</string>
    <string name="stilled_money">支付金额:</string>
    <string name="invester_balance">账户余额支付:</string>
    <string name="invester_bank_pay">银行卡支付:</string>
    <string name="invester_personal_information">身份信息</string>
    <string name="invester_bank_information">银行信息</string>
    <string name="invester_name">姓名</string>
    <string name="invester_id">身份证号</string>
    <string name="invester_id_hint">正确填写您的身份证号</string>
    <string name="invester_bank_id">所属银行</string>
    <string name="invester_bank_id_hint">点击选择</string>
    <string name="invester_backcard">银行卡号</string>
    <string name="invester_backcard_hint">正确填写银行卡号</string>
    <string name="et_invest_pay_identity">请输入身份证号</string>
    <string name="et_invest_pay_bankcard">请输入您名下的银行卡号</string>
    <string name="et_invest_pay_username">请输入姓名</string>
    <string name="invester_identity">身份证</string>
    <string name="invester_bankname">选择银行</string>
    <string name="et_invest_pay_bankname">请选择银行</string>
    <string name="invester_bankcard">银行卡号</string>
    <string name="error_no_bank_list">获取支持的银行卡列表失败</string>
    <string name="invester_password">交易密码</string>
    <string name="invester_password_hint">请输入交易密码</string>
    <string name="title_activity_in_progress">InProgressActivity</string>
    <string name="title_activity_save_money_success">SaveMoneySuccessActivity</string>
    <string name="trade_pwd_top_text_hint">请设置六位数字的交易密码</string>
    <string name="trade_pwd_again">确认密码</string>
    <string name="trade_pwd_et_hint1">请确认交易密码</string>
    <string name="text_trade_pwd_hint">交易密码在转入、转出中使用</string>
    <string name="text_confirm">确定</string>
    <string name="text_seted_trade_pwd_hint1">您已经设置了交易密码</string>
    <string name="Reset_Passwrod">交易密码</string>
    <string name="Reset_passwrod_wei">未设置</string>
    <string name="please_edite_pwd">请输入交易密码</string>
    <string name="error_pwd_length">输入密码长度错误</string>
    <string name="error_two_pwd_not_same">两次输入密码不一致</string>
    <string name="error_login_pwd_same">交易密码与登录密码不能一致</string>
    <string name="text_change_pwd_originalpwd">原登录密码</string>
    <string name="text_change_pwd_newpwd">新密码</string>
    <string name="text_change_pwd_confirmnewpwd">确认新密码</string>
    <string name="text_change_pwd_confirmchange">确定修改</string>
    <string name="error_exception">小草犯困了，休息一会</string>
    <string name="withdraw_money_text">储蓄卡</string>
    <string name="withdraw_money_text_1">钱包本金：</string>
    <string name="withdraw_money">确认转出</string>
    <string name="error_msg_notradepwd">请先设置交易密码</string>
    <string name="update_tip_title">更新提示</string>
    <string name="update_tip_button">更新</string>
    <string name="update_tip_button_cancel">取消</string>
    <string name="jpush_message_button">进入草根钱包</string>
    <string name="jpush_message_text_hint">草根钱包欢迎您</string>
    <string name="text_first_setlock_msg">设置手势密码更安全</string>
    <string name="text_first_setlock_btnleft">以后再说</string>
    <string name="text_first_setlock_btnright">立即设置</string>
    <string name="bank_not_logout_msg">为了您的资金安全，请联系客服修改银行卡\n客服电话：</string>
    <string name="bank_not_logout_msg_ok">确认注销银行卡吗?</string>
    <string name="rmb"> 元</string>
    <string name="dialog_main_btn_text">开始生钱</string>
    <string name="my_wallet_text1">已转入金额（元）</string>
    <string name="my_wallet_text2">固定年化收益率</string>
    <string name="my_wallet_text3">可用收益（元）</string>
    <string name="my_wallet_text4">转入</string>
    <string name="my_wallet_text5">转出</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>
</resources>