<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/box"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/main_bg_white">
    <EditText
        android:layout_marginTop="50dp"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:hint="@string/text_change_pwd_originalpwd"
        android:id="@+id/et_originalpwd"
        android:background="@drawable/bg_change_pwd"
        android:password="true"
        android:maxLength="20"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_16sp"/>
    <EditText
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:hint="@string/text_change_pwd_newpwd"
        android:id="@+id/et_newlpwd"
        android:background="@drawable/bg_change_pwd"
        android:password="true"
        android:maxLength="20"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_16sp"/>
    <EditText
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:hint="@string/text_change_pwd_confirmnewpwd"
        android:id="@+id/et_confirmlpwd"
        android:background="@drawable/bg_change_pwd"
        android:password="true"
        android:inputType="text"
        android:maxLength="20"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_16sp"/>

    <Button
        android:background="@drawable/bg_remond_selector"
        android:layout_margin="20dp"
        android:id="@+id/btn_change_confirm"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/text_change_pwd_confirmchange"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_20sp"/>
</LinearLayout>
