<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/box"
    android:orientation="vertical"
    android:background="@color/main_bg_white"
    >
    <LinearLayout
        android:id="@+id/trade_pwd_parent"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:text="@string/trade_pwd_top_text_hint"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textColor="@color/remond_take_turns_text1"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"/>
        <View
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/bg_line"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:background="@color/white"
            android:minHeight="@dimen/more_item_height"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="@string/invester_password"
                android:layout_marginLeft="20dp" />

            <EditText
                android:id="@+id/trade_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/main_tips1"
                android:textSize="16sp"
                android:hint="@string/invester_password_hint"
                android:textColorHint="@color/bg_account_gred"
                android:singleLine="true"
                android:maxLength="6"
                android:password="true"
                android:inputType="number"
                android:background="@null" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/bg_line"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:background="@color/white"
            android:minHeight="@dimen/more_item_height"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="@string/trade_pwd_again"
                android:layout_marginLeft="20dp" />

            <EditText
                android:id="@+id/trade_pwd_again"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/main_tips1"
                android:textSize="16sp"
                android:hint="@string/trade_pwd_et_hint1"
                android:textColorHint="@color/bg_account_gred"
                android:singleLine="true"
                android:maxLength="6"
                android:password="true"
                android:inputType="number"
                android:background="@null" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/bg_line"/>
        <TextView
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/text_trade_pwd_hint"
            android:textSize="@dimen/text_size_12sp"
            android:textColor="@color/remond_take_turns_text1"
            android:layout_width="match_parent"
            android:layout_height="40dp" />
        <Button
            android:id="@+id/trade_pwd_confirm"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_remond_selector"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:textSize="@dimen/text_size_16sp"
            android:text="@string/text_confirm"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"/>
    </LinearLayout>
    <LinearLayout
        android:visibility="gone"
        android:layout_marginTop="20dp"
        android:id="@+id/layout_seted_trade_pwd"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:text="@string/text_seted_trade_pwd_hint1"
            android:textSize="@dimen/text_size_18sp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <include layout="@layout/layout_banner"
        android:layout_gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</RelativeLayout>
