<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/main_bg_white"
    android:orientation="vertical">
    <TextView
        android:gravity="center"
        android:textColor="@color/gray"
        android:textSize="@dimen/text_size_16sp"
        android:text="@string/text_first_setlock_msg"
        android:layout_width="300dp"
        android:layout_height="70dp" />
    <View
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bg_line"/>
    <LinearLayout
        android:gravity="center"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <TextView
            android:layout_weight="1"
            android:id="@+id/tv_first_login_left"
            android:gravity="center"
            android:textColor="@color/gray"
            android:textSize="@dimen/text_size_16sp"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/text_first_setlock_btnleft"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/bg_line"/>
        <TextView
            android:layout_weight="1"
            android:id="@+id/tv_first_login_right"
            android:gravity="center"
            android:textColor="@color/btn_invest"
            android:textSize="@dimen/text_size_16sp"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/text_first_setlock_btnright"/>
    </LinearLayout>
</LinearLayout>
