<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/bg_regist"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/bg_regist_first_box"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/et_regist_mobile"
                android:numeric="integer"
                android:maxLength="11"
                android:hint="@string/hint_regist_mobile"
                android:textSize="@dimen/hint_regist_mobile"
                android:textColor="@color/hint_regist_edit"
                android:textColorHint="@color/hint_regist_edit"
                android:drawableLeft="@mipmap/icon_regist_user"
                android:drawablePadding="10dp"
                android:padding="10dp"
                android:background="@drawable/bg_regist_edit"
                android:layout_width="match_parent"
                android:layout_height="40dp" />
            <RelativeLayout
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="40dp">
                <EditText
                    android:id="@+id/et_regist_security_code"
                    android:hint="@string/hint_regist_security_code"
                    android:textColorHint="@color/hint_regist_edit"
                    android:textSize="@dimen/hint_regist_mobile"
                    android:textColor="@color/hint_regist_edit"
                    android:padding="10dp"
                    android:background="@drawable/bg_regist_edit"
                    android:layout_width="120dp"
                    android:layout_height="match_parent" />
                <TextView
                    android:id="@+id/tv_regist_get_security_code"
                    android:layout_alignParentRight="true"
                    android:gravity="center"
                    android:textSize="@dimen/hint_regist_mobile"
                    android:textColor="@color/black"
                    android:text="@string/hint_regist_get_security_code"
                    android:background="@color/bg_get_security_code"
                    android:layout_width="120dp"
                    android:layout_height="match_parent"/>
            </RelativeLayout>
            <Button
                android:id="@+id/btn_regist_next"
                android:layout_marginTop="50dp"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_16sp"
                android:background="@color/bg_regist_button"
                android:text="@string/hint_regist_next"
                android:layout_width="match_parent"
                android:layout_height="42dp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
