<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/bg_center"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_tip_title"
            android:gravity="center"
            android:textColor="@color/gray"
            android:textSize="@dimen/text_size_18sp"
            />
        <View
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/bg_line"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textSize="@dimen/text_size_16sp"
            android:textColor="@color/gray"
            android:id="@+id/update_version"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textSize="@dimen/text_size_16sp"
            android:textColor="@color/gray"
            android:id="@+id/update_version_size"
            />
        <TextView
            android:layout_marginTop="10dp"
            android:textColor="@color/gray"
            android:textSize="@dimen/text_size_16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/update_notice"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            />
    </LinearLayout>
    <View
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bg_line"/>
    <LinearLayout
        android:gravity="center"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <TextView
            android:layout_weight="1"
            android:id="@+id/update_button_cancel"
            android:gravity="center"
            android:textColor="@color/gray"
            android:textSize="@dimen/text_size_16sp"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/update_tip_button_cancel"/>
        <View
            android:id="@+id/update_center_line"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/bg_line"/>
        <TextView
            android:layout_weight="1"
            android:id="@+id/update_tip_button"
            android:gravity="center"
            android:textColor="@color/btn_invest"
            android:textSize="@dimen/text_size_16sp"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/update_tip_button"/>
    </LinearLayout>
</LinearLayout>